--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <div class="span4"></div>
       <div class="span4"></div>
     </div>
+    <div class="row">
+      <div class="span4"></div>
+      <div class="span4"></div>
+      <div class="span4"></div>
+    </div>
   </div>
 </body>
 </html>
